--- a/.github/workflows/dotnet-build-and-test.yml
+++ b/.github/workflows/dotnet-build-and-test.yml
@@ -1,10 +1,10 @@
-name: .NET Build and Test
+name: dotnet build
 
 on:
   push:
-    branches:["master"]
+    branches: ["master"]
   pull_request:
-    branches:["master"]
+    branches: ["master"]
 
 jobs:
   build:
