feat: Implemented add method for Project entity #3

--- a/src/Repositories/Subutai.Repository.SqlRepository/Subutai.Repository.SqlRepository.csproj
+++ b/src/Repositories/Subutai.Repository.SqlRepository/Subutai.Repository.SqlRepository.csproj
@@ -4,4 +4,8 @@
     <ProjectReference Include="../../Subutai.Domain.Ports/Subutai.Domain.Ports.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
+  </ItemGroup>
+
 </Project>
