--- a/src/Subutai.Domain.Ports/Subutai.Domain.Ports.csproj
+++ b/src/Subutai.Domain.Ports/Subutai.Domain.Ports.csproj
@@ -1,3 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+  <ItemGroup>
+    <ProjectReference Include="../Subutai.Domain.Model/Subutai.Domain.Model.csproj" />
+  </ItemGroup>
 </Project>
