--- a/tests/Subutai.Repository.SqlRepository.Tests/Subutai.Repository.SqlRepository.Tests.csproj
+++ b/tests/Subutai.Repository.SqlRepository.Tests/Subutai.Repository.SqlRepository.Tests.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="FluentAssertions" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="Moq.EntityFrameworkCore" Version="9.0.0.1" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
